# PengPengEnglish

./: .gitignore  LICENSE  README.md  android-feature-parity.md
Flutter/: .flutter-plugins-dependencies  README.md  pubspec.yaml  环境版本信息.txt
Flutter/android/app/: build.gradle.kts
Flutter/android/app/src/main/: AndroidManifest.xml
Flutter/assets/packs/: primary_school_examples.txt  primary_school_words.txt
Flutter/integration_android/: AmyAssetMaterializer.kt  MainActivity.kt  PiperOnnxTtsManager.kt
Flutter/ios/Runner/: Info.plist
Flutter/ios/Runner.xcodeproj/: project.pbxproj
Flutter/lib/: app_root.dart  main.dart  main_shell.dart
Flutter/lib/models/: piper_model_option.dart  vocab_pack.dart  word_entry.dart
Flutter/lib/screens/: mine_page.dart  placeholder_page.dart  simple_static_screen.dart  study_record_screen.dart  version_info_screen.dart  voice_download_screen.dart
Flutter/lib/services/: dictionary_db.dart  native_paths.dart  piper_asset_bootstrap.dart  piper_tts_platform.dart  study_history_repository.dart  voice_installer.dart  voice_remote_catalog.dart
Flutter/lib/tabs/: vocab_tab.dart
Flutter/linux/: CMakeLists.txt
Flutter/linux/runner/: my_application.cc
Flutter/macos/Runner.xcodeproj/: project.pbxproj
Flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Flutter/macos/Runner/Configs/: AppInfo.xcconfig
Flutter/test/: widget_test.dart
Flutter/tools/: inject_sherpa_piper_onnx_metadata.py
Flutter/web/: index.html  manifest.json
Flutter/windows/: CMakeLists.txt
Flutter/windows/runner/: Runner.rc  main.cpp
android/: ANDROID_BUILD_SPEED.md  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/pengpengenglish/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/pengpengenglish/: DictionaryDb.kt  FliteNativeBridge.kt  FliteNativeTtsManager.kt  InfoPagesActivity.kt  MainActivity.kt  PiperOnnxTtsManager.kt  StudyHistoryRepository.kt  StudyRecordActivity.kt  SystemTtsManager.kt  VoiceDownloadActivity.kt
android/app/src/main/res/layout/: activity_acknowledgements.xml  activity_developer_info.xml  activity_favorites.xml  activity_phone_info.xml  activity_privacy_policy.xml  activity_profile.xml  activity_setting_general.xml  activity_setting_playback.xml  activity_setting_privacy.xml  activity_study_record.xml  activity_user_agreement.xml  activity_version_info.xml  activity_voice_download.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/example/pengpengenglish/: ExampleUnitTest.kt
android/espeak/: build.gradle.kts  consumer-rules.pro
android/espeak/jni/: CMakeLists.txt
android/espeak/src/main/res/values/: strings.xml
android/flite/: build.gradle.kts
android/flite/src/main/cpp/: CMakeLists.txt  flite_jni.cpp
android/gradle/wrapper/: gradle-wrapper.properties
android/tools/: import_english_vocabulary_examples.py  import_wordnet_examples.py
(+7 files in other folders)
